--- a/style.css
+++ b/style.css
@@ -3,15 +3,37 @@
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Header */
 
-header {
+.headerNl {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: gray;
   padding: 25px 0;
+  height: 500px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://images.unsplash.com/photo-1587582816472-81e94768469a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80");
+}
+
+.headerSearch {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: baseline;
+  /* background-color: gray; */
+  padding: 25px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://images.unsplash.com/photo-1587582816472-81e94768469a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80");
+}
+
+.header__h1 a {
+  color: white;
 }
 
 #search__form {
@@ -38,6 +60,13 @@ header {
   border-radius: 0 3px 3px 0;
   height: 31px;
   width: 50px;
+  background-color: rgb(202, 5, 5);
+  color: white;
+  cursor: pointer;
+}
+
+#searchSubmit:hover {
+  filter: brightness(0.85);
 }
 
 /* Main */
