--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  line-height: 1.25;
 }
 
 :root {
@@ -23,6 +24,7 @@ a {
   height: 500px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("https://images.unsplash.com/photo-1587582816472-81e94768469a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80");
+  background-size: cover;
 }
 
 .headerSearch {
@@ -35,14 +37,11 @@ a {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("https://images.unsplash.com/photo-1587582816472-81e94768469a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80");
 }
-
+.header__h1 {
+  margin-right: 25px;
+}
 .header__h1 a {
   color: white;
-}
-
-.header__h1Search {
-  display: default;
-  margin-right: 25px;
 }
 
 #search__form {
@@ -117,15 +116,17 @@ main {
   justify-content: flex-start;
   align-items: flex-start;
   min-height: 175px;
+  width: auto;
 }
 
 .brewImg {
   border: 0;
   border-radius: 4px;
   margin-right: var(--default-pm-num);
-  height: 250px;
-  width: 250px;
-  object-fit: scale-down;
+  min-height: 250px;
+  min-width: 250px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .pageBtns {
@@ -138,25 +139,27 @@ main {
 /* media queries */
 
 @media screen and (max-width: 1200px) {
+  .headerSearch {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   .searchDiv {
     width: 100%;
   }
   .header__h1 {
     margin: 0;
+    padding: 0 10px;
     width: auto;
   }
 }
 @media screen and (max-width: 600px) {
-  .header__h1Search {
-    display: none;
-  }
-  .headerSearch {
-    justify-content: center;
-    align-items: center;
-  }
   .searchDiv {
     flex-flow: column;
     justify-content: center;
     align-items: center;
+  }
+  .brewImg {
+    margin: 0 0 10px 0;
   }
 }
