--- a/style.css
+++ b/style.css
@@ -87,6 +87,33 @@ main {
   margin: 25px 0;
 }
 
+.next {
+  border: 0;
+  border-radius: 0 5px 5px 0;
+  height: 43px;
+  width: 50px;
+  background-color: rgb(202, 5, 5);
+  border: 1px solid rgba(211, 211, 211, 0.5);
+  color: white;
+  cursor: pointer;
+}
+
+.previous {
+  border: 0;
+  border-radius: 5px 0 0 5px;
+  height: 43px;
+  width: 50px;
+  background-color: rgb(202, 5, 5);
+  border: 1px solid rgba(211, 211, 211, 0.5);
+  color: white;
+  cursor: pointer;
+}
+
+.next:hover,
+.previous:hover {
+  filter: brightness(0.85);
+}
+
 .main__h3,
 .previous,
 .next {
@@ -103,6 +130,7 @@ main {
 .searchDiv {
   display: flex;
   flex-direction: row;
+  align-items: center;
   padding: var(--default-pm-num);
   border: 1px solid rgba(211, 211, 211, 0.5);
   border-radius: 5px;
@@ -115,8 +143,24 @@ main {
   flex-flow: column wrap;
   justify-content: flex-start;
   align-items: flex-start;
-  min-height: 175px;
+  min-height: 125px;
   width: auto;
+}
+
+.infoDiv__H3 {
+  margin-bottom: 8px;
+}
+
+.infoDiv__description {
+  margin-top: 8px;
+}
+
+.infoDiv__website {
+  color: rgb(109, 109, 109);
+}
+
+.infoDiv__website:hover {
+  text-decoration: underline;
 }
 
 .brewImg {
