--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -38,6 +40,8 @@ a {
     url("https://images.unsplash.com/photo-1587582816472-81e94768469a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80");
 }
 .header__h1 {
+  font-family: "Bonheur Royale", cursive;
+  font-size: 50px;
   margin-right: 25px;
 }
 .header__h1 a {
