--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ a {
   flex-direction: row;
   justify-content: flex-start;
   align-items: baseline;
-  /* background-color: gray; */
   padding: 25px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("https://images.unsplash.com/photo-1587582816472-81e94768469a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80");
@@ -188,6 +187,39 @@ main {
   justify-content: center;
   align-items: center;
 }
+
+/* loading animation */
+
+.loadingContainer {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  opacity: 0.8;
+  background-color: #ccc;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
+}
+
+.loading {
+  margin: 0 auto;
+  font-size: 175px !important;
+  animation: spin 1.25s infinite ease-in-out;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* footer */
 footer {
   margin: 25px 0;
