--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ footer {
 }
 
 footer a {
-  font-family: "Bonheur Royale";
+  /* font-family: "Bonheur Royale"; */
   text-decoration: none;
   color: black;
 }
